# djninja

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: ci.yml
ninja_prac/: asgi.py  local_settings.py  settings.py  urls.py  wsgi.py
ninja_prac/tests/: test_view.py
tabom/apis/v1/: article_router.py  like_router.py
tabom/apis/v1/schemas/: article_create_request.py  article_response.py  like_request.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py
tabom/models/: article.py  like.py  user.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_auto_now.py  test_cascade.py  test_like_service.py
